[package]
name = "serde-keyvalue-prim"
version = "0.1.1"
edition = "2021"
license = "BSD-3-Clause"
description = "Deserialize key=value parameters with serde, supporting multiple delimiters, both key=value and key:value separated by either , or ;."
repository = "https://github.com/simonsso/serde-keyvalue-prim"
documentation = "https://docs.rs/serde-keyvalue-prim"
# forked from homepage = "https://gitlab.com/BrightOpen/serde-keyvalue"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
num-traits = "0.2.18"
remain = "0.2.13"
serde = { version = "1.0.197", default-features = false, features = ["derive", "alloc", "std"] }
thiserror = "1.0.57"
